# aini

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: auto-ci.yml  publish.yml
aini/: __init__.py  builder.py  listing.py  viewer.py
aini/autogen/: assistant.yml  context.yml  llm.yml  userproxy.yml
aini/graph/: requirements.txt
aini/graph/src/: chat.py
aini/lang_book/: idea_val.py  idea_validator.py
tests/: conftest.py  test_builder.py  test_listing.py  test_viewer.py
