[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aini"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Alpha x1", email = "alpha.xone@outlook.com"},
]
description = "Declarative AI components"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alpha-xone/aini"
"Bug Tracker" = "https://github.com/alpha-xone/aini/issues"

[tool.setuptools]
packages = ["aini"]
include-package-data = true

[tool.setuptools.package-data]
"aini" = ["**/*.yml", "**/*.yaml", "**/*.json"]

[tool.setuptools.dynamic]
version = {attr = "aini.__version__"}
dependencies = {env = "AINI_DEPENDENCIES", delimiter = ";"}
